<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="marwor.ninja_book.MainActivity"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp"
        android:orientation="vertical"
        android:layout_weight="1.2">


        <Button
            android:id="@+id/borrow"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".2"
            android:onClick="wypozycz"
            android:text="@string/borrow_book" />

        <Button
            android:id="@+id/returnBook"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".2"
            android:text="@string/return_book" />

        <Button
            android:id="@+id/queue"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".2"
            android:text="@string/show_queues" />

        <Button
            android:id="@+id/myBooks"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".2"
            android:text="@string/my_books" />

        <Button
            android:id="@+id/searchBook"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".2"
            android:text="@string/search_book" />

        <Button
            android:id="@+id/comment"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".2"
            android:text="@string/comments" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>